examples/test_package/Double_dc_full/steps/benchzebra_precise_run2/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.% Problog Inference Result：
zebra([house(red,english,X33,X34,X35), house(X36,X37,X38,X39,X40), house(X41,X42,X43,X44,X45), house(X46,X47,X48,X49,X50), house(X51,X52,X53,X54,X55)]) = 1.0000
zebra([house(X36,X37,X38,X39,X40), house(red,english,X33,X34,X35), house(X41,X42,X43,X44,X45), house(X46,X47,X48,X49,X50), house(X51,X52,X53,X54,X55)]) = 1.0000
zebra([house(X36,X37,X38,X39,X40), house(X41,X42,X43,X44,X45), house(red,english,X33,X34,X35), house(X46,X47,X48,X49,X50), house(X51,X52,X53,X54,X55)]) = 1.0000
zebra([house(X36,X37,X38,X39,X40), house(X41,X42,X43,X44,X45), house(X46,X47,X48,X49,X50), house(red,english,X33,X34,X35), house(X51,X52,X53,X54,X55)]) = 1.0000
zebra([house(X36,X37,X38,X39,X40), house(X41,X42,X43,X44,X45), house(X46,X47,X48,X49,X50), house(X51,X52,X53,X54,X55), house(red,english,X33,X34,X35)]) = 1.0000